# Projection

./: .formatter.exs  .gitignore  LICENSE  README.md  mix.exs
config/: config.exs
lib/: projection.ex  projection_ui.ex
lib/mix/tasks/: projection.codegen.ex  ui.preview.ex
lib/projection/: patch.ex  protocol.ex  router.ex  session.ex  telemetry.ex
lib/projection/router/: dsl.ex
lib/projection/ui/: app_shell.slint  error.slint  ui.slint
lib/projection_ui/: port_owner.ex  schema.ex  screen.ex  session_supervisor.ex  state.ex
lib/projection_ui/components/: status_badge.ex
lib/projection_ui/runtime/: host_bridge.ex  port_owner.ex  session_supervisor.ex
priv/protocol_contract/: contract.json
projection_new/: .gitignore  README.md  mix.exs
projection_new/lib/: projection_new.ex
projection_new/priv/templates/projection.new/slint/ui_host/: .gitignore  Cargo.toml
projection_new/priv/templates/projection.new/slint/ui_host/src/: patch_apply.rs  protocol.rs
projection_new/test/: projection_new_test.exs
slint/ui_host/: Cargo.toml  build.rs
slint/ui_host/src/: main.rs  (+2 more)
slint/ui_host_runtime/: Cargo.toml
test/: projection_test.exs  test_helper.exs
test/projection/: compile_projection_codegen_task_test.exs  host_bridge_test.exs  m3_list_patch_test.exs  patch_test.exs  port_owner_test.exs  protocol_test.exs  router_test.exs  schema_test.exs  session_batching_test.exs  session_port_integration_test.exs  session_router_test.exs  session_screen_controller_test.exs  session_telemetry_test.exs  state_change_tracking_test.exs
test_support/: test_fixtures.ex
(+30 files in other folders)
